Final changes for the day

--- a/IntersectionObserver/Practice/stickyNavigationBar/index.html
+++ b/IntersectionObserver/Practice/stickyNavigationBar/index.html
@@ -22,11 +22,7 @@
     }
 
     .header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 999;
+      background-color: #f9f9f9;
     }
 
     /* Main content styles */
@@ -108,6 +104,11 @@
     }
 
     .nav_scrolled {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 999;
       background-color: #333 !important;
     }
   </style>
@@ -211,26 +212,26 @@
     </section>
 
     <section class="features">
-      <h2>Our Customers</h2>
+      <h2>Our Clients</h2>
       <div class="feature">
         <img src="https://via.placeholder.com/400" alt="Feature 1">
-        <h3>Customer 1</h3>
+        <h3>Client 1</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <div class="feature">
         <img src="https://via.placeholder.com/400" alt="Feature 2">
-        <h3>Customer 2</h3>
+        <h3>Client 2</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <div class="feature">
         <img src="https://via.placeholder.com/400" alt="Feature 3">
-        <h3>Customer 3</h3>
+        <h3>Client 3</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
     </section>
 
     <section class="testimonial">
-      <h2>What Our Customers Say</h2>
+      <h2>What Our Clients Say</h2>
       <div class="quote">
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
           dolore magna aliqua."</p>
